--- a/mokepon.html
+++ b/mokepon.html
@@ -43,8 +43,15 @@
     <section id="seleccionar-ataque">
         <h2>Elige a tu ataque: </h2>
 
-        <p>Tu mascota tiene <span>3</span>  vidas</p>
-        <p>La mascota del enemigo tiene <span>3</span> vidas</p>
+        <p>Tu mascota 
+            <span id="mascota-jugador"> </span> 
+            tiene <span>3</span>  vidas
+        </p>
+
+        <p>La mascota 
+            <span id="mascota-enemigo"> </span>, 
+            del enemigo, tiene <span>3</span> vidas
+        </p>
 
         <p>
             <button id="boton-fuego">Fuego 🔥</button>
