Clase 22 - Enemigos aleatorios

--- a/mokepon.html
+++ b/mokepon.html
@@ -48,9 +48,9 @@
             tiene <span>3</span>  vidas
         </p>
 
-        <p>La mascota 
-            <span id="mascota-enemigo"> </span>, 
-            del enemigo, tiene <span>3</span> vidas
+        <p>La mascota del enemigo: 
+            <span id="mascota-enemigo"> </span> 
+            , tiene <span>3</span> vidas
         </p>
 
         <p>
