--- a/mokepon.html
+++ b/mokepon.html
@@ -64,7 +64,7 @@
     <!--Crear sección para mostrar mensajes-->
     <section id="mensajes">
 
-        <p>Tu mascota atacó con FUEGO, la mascota del enemigo atacó con TIERRA, ¡Ganaste 🥳!</p>
+        <p>Tu mascota atacó con <span id="ataque-jugador"> </span>, la mascota del enemigo atacó con TIERRA, ¡Ganaste 🥳!</p>
 
     </section>
 
