Clase 25 - creacion de HTML desde JS e insercion en html con createElement( ) y append( )

--- a/mokepon.html
+++ b/mokepon.html
@@ -64,9 +64,11 @@
     <!--Crear sección para mostrar mensajes-->
     <section id="mensajes">
 
-        <p>Tu mascota atacó con <span id="ataque-jugador"> </span>
-            
-            , la mascota del enemigo atacó con <span id="ataque-enemigo"> </span>, ¡Ganaste 🥳!</p>
+        <!--
+
+        <p>Tu mascota atacó con FUEGO, la mascota del enemigo atacó con TIERRA, ¡Ganaste 🥳!</p>
+
+        -->
 
     </section>
 
