Lógica para control y actualizacion de vidas

--- a/mokepon.html
+++ b/mokepon.html
@@ -43,14 +43,14 @@
     <section id="seleccionar-ataque">
         <h2>Elige a tu ataque: </h2>
 
-        <p>Tu mascota 
-            <span id="mascota-jugador"> </span> 
-            tiene <span>3</span>  vidas
+        <p>Seleccionaste a la mascota:  
+            <span id="mascota-jugador"> </span> ||
+            Vidas: <span id="vidas-jugador"></span>  
         </p>
 
-        <p>La mascota del enemigo: 
+        <p> Mascota seleccionada por el enemigo: 
             <span id="mascota-enemigo"> </span> 
-            , tiene <span>3</span> vidas
+            || Vidas: <span id="vidas-enemigo"></span>
         </p>
 
         <p>
