Uso de metodo reload() para reiniciar juego y Bloqueo de botones al terminar juego formando una colección con los botones de ataque con getElementsByClassName( )

--- a/mokepon.html
+++ b/mokepon.html
@@ -54,9 +54,9 @@
         </p>
 
         <p>
-            <button id="boton-fuego">Fuego 🔥</button>
-            <button id="boton-agua">Agua 💧</button>
-            <button id="boton-tierra">Tierra 🌱</button>
+            <button id="boton-fuego" class="btn-ataque">Fuego 🔥</button>
+            <button id="boton-agua" class="btn-ataque">Agua 💧</button>
+            <button id="boton-tierra" class="btn-ataque">Tierra 🌱</button>
         </p>
 
     </section>
