--- a/mokepon.html
+++ b/mokepon.html
@@ -72,9 +72,9 @@
             </p>
 
             <p>
-                <button id="boton-fuego" class="btn-ataque">Fuego 🔥</button>
-                <button id="boton-agua" class="btn-ataque">Agua 💧</button>
-                <button id="boton-tierra" class="btn-ataque">Tierra 🌱</button>
+                <button id="boton-fuego" class="btn-ataque btn-style1">Fuego 🔥</button>
+                <button id="boton-agua" class="btn-ataque btn-style1">Agua 💧</button>
+                <button id="boton-tierra" class="btn-ataque btn-style1">Tierra 🌱</button>
             </p>
 
         </section>
@@ -94,7 +94,7 @@
         <!--Crear sección para reiniciar juego-->
         <section id="reiniciar">
 
-            <button id="boton-reiniciar">Reiniciar</button>  
+            <button id="boton-reiniciar" class="btn-style1">Reiniciar</button>  
 
         </section>
     </main>
