Avance CCS 3: Elaboración cards parte 2

--- a/mokepon.html
+++ b/mokepon.html
@@ -97,7 +97,7 @@
                         </div>
                         <div>
                             <p>#0005</p>
-                            <p>Hipodoge</p>
+                            <p>Tucapalma</p>
                             <div>
                                 <p>Agua</p>
                                 <p>Tierra</p>
@@ -116,7 +116,7 @@
                         </div>
                         <div>
                             <p>#0006</p>
-                            <p>Hipodoge</p>
+                            <p>Pydos</p>
                             <div>
                                 <p>Tierra</p>
                                 <p>Fuego</p>
