--- a/mokepon.html
+++ b/mokepon.html
@@ -28,8 +28,8 @@
                             <input type="radio" name="mascota" value="hipodoge" id="hipodoge">
                         </div>
                         <div>
-                            <p>#0001</p>
-                            <p>Hipodoge</p>
+                            <p class="text-mokepon-number">#0001</p>
+                            <p class="text-mokepon-name">Hipodoge</p>
                             <div>
                                 <p>Agua</p>
                             </div>
@@ -45,8 +45,8 @@
                             <input type="radio" name="mascota" value="capipepo" id="capipepo">
                         </div>
                         <div>
-                            <p>#0002</p>
-                            <p>Capipepo</p>
+                            <p class="text-mokepon-number">#0002</p>
+                            <p class="text-mokepon-name">Capipepo</p>
                             <div>
                                 <p>Tierra</p>
                             </div>
@@ -61,8 +61,8 @@
                             <input type="radio" name="mascota" value="ratigueya" id="ratigueya">
                         </div>
                         <div>
-                            <p>#0003</p>
-                            <p>Ratigueya</p>
+                            <p class="text-mokepon-number">#0003</p>
+                            <p class="text-mokepon-name">Ratigueya</p>
                             <div>
                                 <p>Fuego</p>
                             </div>
@@ -78,8 +78,8 @@
                             <input type="radio" name="mascota" value="langostelvis" id="langostelvis">
                         </div>
                         <div>
-                            <p>#0004</p>
-                            <p>Langostelvis</p>
+                            <p class="text-mokepon-number">#0004</p>
+                            <p class="text-mokepon-name">Langostelvis</p>
                             <div>
                                 <p>Agua</p>
                                 <p>Fuego</p>
@@ -96,8 +96,8 @@
                             <input type="radio" name="mascota" value="tucapalma" id="tucapalma">  
                         </div>
                         <div>
-                            <p>#0005</p>
-                            <p>Tucapalma</p>
+                            <p class="text-mokepon-number">#0005</p>
+                            <p class="text-mokepon-name">Tucapalma</p>
                             <div>
                                 <p>Agua</p>
                                 <p>Tierra</p>
@@ -115,8 +115,8 @@
                             <input type="radio" name="mascota" value="pydos" id="pydos">
                         </div>
                         <div>
-                            <p>#0006</p>
-                            <p>Pydos</p>
+                            <p class="text-mokepon-number">#0006</p>
+                            <p class="text-mokepon-name">Pydos</p>
                             <div>
                                 <p>Tierra</p>
                                 <p>Fuego</p>
