Elaboracion de BADGES de ataques

--- a/mokepon.html
+++ b/mokepon.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <main>
-        <h1>MOKEPON! 🔥💧🌱 </h1>
+        <h1>MOKEPON</h1>
 
         <!--Crear sección para seleccionar mokepon-->
 
@@ -31,7 +31,7 @@
                             <p class="text-mokepon-number">#0001</p>
                             <p class="text-mokepon-name">Hipodoge</p>
                             <div>
-                                <p>Agua</p>
+                                <p class="water-attack-badge">Agua</p>
                             </div>
                         </div>
 
@@ -48,7 +48,7 @@
                             <p class="text-mokepon-number">#0002</p>
                             <p class="text-mokepon-name">Capipepo</p>
                             <div>
-                                <p>Tierra</p>
+                                <p class="tierra-attack-badge">Tierra</p>
                             </div>
                         </div>
                     </div>
@@ -64,7 +64,7 @@
                             <p class="text-mokepon-number">#0003</p>
                             <p class="text-mokepon-name">Ratigueya</p>
                             <div>
-                                <p>Fuego</p>
+                                <p class="fire-attack-badge">Fuego</p>
                             </div>
                         </div>
 
@@ -81,8 +81,8 @@
                             <p class="text-mokepon-number">#0004</p>
                             <p class="text-mokepon-name">Langostelvis</p>
                             <div>
-                                <p>Agua</p>
-                                <p>Fuego</p>
+                                <p class="water-attack-badge">Agua</p>
+                                <p class="fire-attack-badge">Fuego</p>
                             </div>
                         </div>
 
@@ -99,8 +99,8 @@
                             <p class="text-mokepon-number">#0005</p>
                             <p class="text-mokepon-name">Tucapalma</p>
                             <div>
-                                <p>Agua</p>
-                                <p>Tierra</p>
+                                <p class="water-attack-badge">Agua</p>
+                                <p class="tierra-attack-badge">Tierra</p>
                             </div>
                         </div>
 
@@ -118,15 +118,15 @@
                             <p class="text-mokepon-number">#0006</p>
                             <p class="text-mokepon-name">Pydos</p>
                             <div>
-                                <p>Tierra</p>
-                                <p>Fuego</p>
+                                <p class="tierra-attack-badge">Tierra</p>
+                                <p class="fire-attack-badge">Fuego</p>
                             </div>
                         </div>
 
                     </div>
                 </div>
     
-                <button id="boton-mascota" class="btn-style1">Seleccionar</button>
+                <button id="boton-mascota" class="btn-style1 text-button">Seleccionar</button>
             </form>
 
         </section>
@@ -147,9 +147,9 @@
             </p>
 
             <p>
-                <button id="boton-fuego" class="btn-ataque btn-style1">Fuego 🔥</button>
-                <button id="boton-agua" class="btn-ataque btn-style1">Agua 💧</button>
-                <button id="boton-tierra" class="btn-ataque btn-style1">Tierra 🌱</button>
+                <button id="boton-fuego" class="btn-ataque btn-style1 text-button">Fuego 🔥</button>
+                <button id="boton-agua" class="btn-ataque btn-style1 text-button">Agua 💧</button>
+                <button id="boton-tierra" class="btn-ataque btn-style1 text-button">Tierra 🌱</button>
             </p>
 
         </section>
@@ -169,7 +169,7 @@
         <!--Crear sección para reiniciar juego-->
         <section id="reiniciar">
 
-            <button id="boton-reiniciar" class="btn-style1">Reiniciar</button>  
+            <button id="boton-reiniciar" class="btn-style1 text-button">Reiniciar</button>  
 
         </section>
     </main>
