--- a/mokepon.html
+++ b/mokepon.html
@@ -10,12 +10,18 @@
 </head>
 <body>
     <main>
-        <h1>MOKEPON</h1>
+        <h1>
+            <img src="./images/pokeball.png" alt="">
+            MOKEPON
+            <img src="./images/pokeball.png" alt="">
+        </h1>
 
         <!--Crear sección para seleccionar mokepon-->
 
         <section id="seleccionar-mascota">
-            <h2>Elige a tu mascota: </h2>
+            <h2>Elige a tu mascota: 
+                <img src="./images/mokepon.png" alt="">
+            </h2>
 
             <form class="mascota-formulario">
 
