--- a/mokepon.html
+++ b/mokepon.html
@@ -142,21 +142,28 @@
         <section id="seleccionar-ataque">
             <h2>Elige a tu ataque: </h2>
 
-            <p>Seleccionaste a la mascota:  
-                <span id="mascota-jugador"> </span> ||
-                Vidas: <span id="vidas-jugador"></span>  
-            </p>
+            <div>
+                <div>
+                    <p>Seleccionaste a la mascota:  
+                        <span id="mascota-jugador"> </span> ||
+                        Vidas: <span id="vidas-jugador"></span>  
+                    </p>
+                </div>
 
-            <p> Mascota seleccionada por el enemigo: 
-                <span id="mascota-enemigo"> </span> 
-                || Vidas: <span id="vidas-enemigo"></span>
-            </p>
+                <div>
+                    <p> Mascota seleccionada por el enemigo: 
+                        <span id="mascota-enemigo"> </span> 
+                        || Vidas: <span id="vidas-enemigo"></span>
+                    </p>
+                </div>
 
-            <p>
+            </div>
+
+            <div>
                 <button id="boton-fuego" class="btn-ataque btn-style1 text-button">Fuego 🔥</button>
                 <button id="boton-agua" class="btn-ataque btn-style1 text-button">Agua 💧</button>
                 <button id="boton-tierra" class="btn-ataque btn-style1 text-button">Tierra 🌱</button>
-            </p>
+            </div>
 
         </section>
 
