--- a/mokepon.html
+++ b/mokepon.html
@@ -143,20 +143,39 @@
             <h2>Elige a tu ataque: </h2>
 
             <div>
-                <div>
-                    <p>Seleccionaste a la mascota:  
-                        <span id="mascota-jugador"> </span> ||
-                        Vidas: <span id="vidas-jugador"></span>  
-                    </p>
+                <div class="card-mokepon-juego">
+                    <div>
+                        Imagen
+                    </div>
+                    <div>
+                        <p>Mascota Seleccionada:</p>
+                        <p id="mascota-jugador"></p>
+                        <div>
+                            <p>Vidas:</p>
+                            <p id="vidas-jugador"></p>
+                        </div>
+                        <div>
+                            <p class="tierra-attack-badge">Tierra</p>
+                        </div>
+                    </div>
                 </div>
 
-                <div>
-                    <p> Mascota seleccionada por el enemigo: 
-                        <span id="mascota-enemigo"> </span> 
-                        || Vidas: <span id="vidas-enemigo"></span>
-                    </p>
+                <div class="card-mokepon-juego">
+                    <div>
+                        Imagen
+                    </div>
+                    <div>
+                        <p>Mascota Seleccionada:</p>
+                        <p id="mascota-enemigo"></p>
+                        <div>
+                            <p>Vidas:</p>
+                            <p id="vidas-enemigo"></p>
+                        </div>
+                        <div>
+                            <p class="tierra-attack-badge">Tierra</p>
+                        </div>
+                    </div>
                 </div>
-
             </div>
 
             <div>
