--- a/mokepon.html
+++ b/mokepon.html
@@ -145,7 +145,15 @@
             <div>
                 <div class="card-mokepon-juego">
                     <div>
-                        Imagen
+                        <h3>Jugador</h3>
+                    </div>
+ 
+                    <div>
+                        <div>
+                            <div>
+                                <img src="./images/001.png" alt="">
+                            </div>
+                        </div>
                     </div>
                     <div>
                         <p>Mascota Seleccionada:</p>
@@ -162,7 +170,14 @@
 
                 <div class="card-mokepon-juego">
                     <div>
-                        Imagen
+                        <h3>Enemigo</h3>
+                    </div>
+                    <div>
+                        <div>
+                            <div>
+                                <img src="./images/002.png" alt="">
+                            </div>
+                        </div>
                     </div>
                     <div>
                         <p>Mascota Seleccionada:</p>
