--- a/mokepon.html
+++ b/mokepon.html
@@ -156,14 +156,15 @@
                         </div>
                     </div>
                     <div>
-                        <p>Mascota Seleccionada:</p>
-                        <p id="mascota-jugador"></p>
+                        <p class="text-mokepon-subtitles">Mascota Seleccionada:</p>
+                        <p id="mascota-jugador" class="text-mokepon-name-clear"></p>
                         <div>
-                            <p>Vidas:</p>
-                            <p id="vidas-jugador"></p>
+                            <p class="text-mokepon-subtitles">Vidas:</p>
+                            <p id="vidas-jugador" class="text-mokepon-subtitles"></p>
                         </div>
                         <div>
                             <p class="tierra-attack-badge">Tierra</p>
+                            <p class="fire-attack-badge">Fuego</p>
                         </div>
                     </div>
                 </div>
@@ -180,11 +181,11 @@
                         </div>
                     </div>
                     <div>
-                        <p>Mascota Seleccionada:</p>
-                        <p id="mascota-enemigo"></p>
+                        <p class="text-mokepon-subtitles">Mascota Seleccionada:</p>
+                        <p id="mascota-enemigo" class="text-mokepon-name-clear"></p>
                         <div>
-                            <p>Vidas:</p>
-                            <p id="vidas-enemigo"></p>
+                            <p class="text-mokepon-subtitles">Vidas:</p>
+                            <p id="vidas-enemigo" class="text-mokepon-subtitles"></p>
                         </div>
                         <div>
                             <p class="tierra-attack-badge">Tierra</p>
