Avance 6 pantalla 2 Estilizando a la caja de mensajes

--- a/mokepon.html
+++ b/mokepon.html
@@ -203,7 +203,16 @@
         </section>
 
         <!--Crear sección para mostrar mensajes-->
-        <section id="mensajes">
+        <section id="mostrar-mensajes">
+            <div>
+                <div>
+                    <div id="mensajes">
+                        <img src="./images/pokeball.png" alt="">
+
+                    </div>
+                </div>
+            </div>
+
 
             <!--
 
