Conversión de btn Reiniciar en flotante - parte 1 - estilizando

--- a/mokepon.html
+++ b/mokepon.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mokepon - Capturalos ya!</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="./js/mokepon.js"></script>
 
 </head>
@@ -226,7 +227,12 @@
         <!--Crear sección para reiniciar juego-->
         <section id="reiniciar">
 
-            <button id="boton-reiniciar" class="btn-style1 text-button">Reiniciar</button>  
+            <button id="boton-reiniciar" class="btn-style2 text-button">
+                <i class="bi bi-arrow-clockwise icon-fijo"></i>
+
+                Reiniciar
+            </button> 
+            
 
         </section>
     </main>
