--- a/mokepon.html
+++ b/mokepon.html
@@ -133,7 +133,10 @@
                     </div>
                 </div>
     
-                <button id="boton-mascota" class="btn-style1 text-button">Seleccionar</button>
+                <button id="boton-mascota" class="btn-style3 text-button boton-flotante">
+                    <img src="./images/pokeball-open.png" alt="">
+                    Seleccionar
+                </button>
             </form>
 
         </section>
@@ -227,7 +230,7 @@
         <!--Crear sección para reiniciar juego-->
         <section id="reiniciar">
 
-            <button id="boton-reiniciar" class="btn-style2 text-button">
+            <button id="boton-reiniciar" class="btn-style2 text-button boton-flotante">
                 <i class="bi bi-arrow-clockwise icon-fijo"></i>
 
                 Reiniciar
