Conversión de btn Seleccionar en flotante - parte 2 - position fixed

--- a/mokepon.html
+++ b/mokepon.html
@@ -133,7 +133,7 @@
                     </div>
                 </div>
     
-                <button id="boton-mascota" class="btn-style3 text-button boton-flotante">
+                <button id="boton-mascota" class="btn-style3 text-button boton-flotante-alineamiento boton-flotante-r0-t20">
                     <img src="./images/pokeball-open.png" alt="">
                     Seleccionar
                 </button>
@@ -228,9 +228,9 @@
 
 
         <!--Crear sección para reiniciar juego-->
-        <section id="reiniciar">
+        <section id="reiniciar" class="boton-flotante-r10-t20">
 
-            <button id="boton-reiniciar" class="btn-style2 text-button boton-flotante">
+            <button id="boton-reiniciar" class="btn-style2 text-button boton-flotante-alineamiento">
                 <i class="bi bi-arrow-clockwise icon-fijo"></i>
 
                 Reiniciar
