--- a/mokepon.html
+++ b/mokepon.html
@@ -163,7 +163,7 @@
                         <p id="mascota-jugador" class="text-mokepon-name-clear"></p>
                         <div>
                             <p class="text-mokepon-subtitles">Vidas:</p>
-                            <p id="vidas-jugador" class="text-mokepon-subtitles"> </p>
+                            <p id="vidas-jugador" class="text-mokepon-hearts"> </p>
                         </div>
                         <div>
                             <p class="fire-attack-badge">Fuego</p>
@@ -188,7 +188,7 @@
                         <p id="mascota-enemigo" class="text-mokepon-name-clear"></p>
                         <div>
                             <p class="text-mokepon-subtitles">Vidas:</p>
-                            <p id="vidas-enemigo" class="text-mokepon-subtitles"></p>
+                            <p id="vidas-enemigo" class="text-mokepon-hearts"></p>
                         </div>
                         <div>
                             <p class="tierra-attack-badge">Tierra</p>
