--- a/mokepon.html
+++ b/mokepon.html
@@ -145,7 +145,9 @@
         <section id="seleccionar-ataque">
             <h2>Elige a tu ataque: </h2>
 
-            <div>
+            <div class="cards-juego-container">
+
+                <!--
                 <div class="card-mokepon-juego">
                     <div>
                         <h3>Jugador</h3>
@@ -171,7 +173,9 @@
                         </div>
                     </div>
                 </div>
-
+                -->
+                
+<!--
                 <div class="card-mokepon-juego">
                     <div>
                         <h3>Enemigo</h3>
@@ -195,6 +199,8 @@
                         </div>
                     </div>
                 </div>
+
+                -->
             </div>
 
             <div>
