--- a/mokepon.html
+++ b/mokepon.html
@@ -11,6 +11,11 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!--Fin Instalador Boostrap CSS -->
 
+    <link rel="stylesheet" 
+          href="./css/tablet.css" 
+          media="screen and (max-width: 950px)">
+
+
     <script src="./js/mokepon.js"></script>
 
 </head>
