--- a/mokepon.html
+++ b/mokepon.html
@@ -15,6 +15,9 @@
           href="./css/tablet.css" 
           media="screen and (max-width: 950px)">
 
+    <link rel="stylesheet" 
+          href="./css/mobile.css" 
+          media="screen and (max-width: 415px)">
 
     <script src="./js/mokepon.js"></script>
 
