BREAKPOINT 2 - 2da pantalla - crear un cuaarto contenedor que contengan solo botones con iconos para los ataques y aparecerlos en pantallas mobiles

--- a/mokepon.html
+++ b/mokepon.html
@@ -216,10 +216,16 @@
                 -->
             </div>
 
-            <div>
+            <div class="btn-screen1">
                 <button id="boton-fuego" class="btn-ataque btn-style1 text-button">Fuego 🔥</button>
                 <button id="boton-agua" class="btn-ataque btn-style1 text-button">Agua 💧</button>
                 <button id="boton-tierra" class="btn-ataque btn-style1 text-button">Tierra 🌱</button>
+            </div>
+
+            <div class="btn-screen2">
+                <button id="boton-fuego" class="btn-ataque btn-style1 text-button"> 🔥</button>
+                <button id="boton-agua" class="btn-ataque btn-style1 text-button"> 💧</button>
+                <button id="boton-tierra" class="btn-ataque btn-style1 text-button"> 🌱</button>
             </div>
 
         </section>
