BreakPoint2 Arreglo de la funcionalidad para los botones de íconos

--- a/mokepon.html
+++ b/mokepon.html
@@ -223,9 +223,9 @@
             </div>
 
             <div class="btn-screen2">
-                <button id="boton-fuego" class="btn-ataque btn-style1 text-button"> 🔥</button>
-                <button id="boton-agua" class="btn-ataque btn-style1 text-button"> 💧</button>
-                <button id="boton-tierra" class="btn-ataque btn-style1 text-button"> 🌱</button>
+                <button id="boton-fuego2" class="btn-ataque btn-style1 text-button"> 🔥</button>
+                <button id="boton-agua2" class="btn-ataque btn-style1 text-button"> 💧</button>
+                <button id="boton-tierra2" class="btn-ataque btn-style1 text-button"> 🌱</button>
             </div>
 
         </section>
