--- a/mokepon.html
+++ b/mokepon.html
@@ -223,9 +223,15 @@
             </div>
 
             <div class="btn-screen2">
-                <button id="boton-fuego2" class="btn-ataque btn-style1 text-button"> 🔥</button>
-                <button id="boton-agua2" class="btn-ataque btn-style1 text-button"> 💧</button>
-                <button id="boton-tierra2" class="btn-ataque btn-style1 text-button"> 🌱</button>
+                <button id="boton-fuego2" class="btn-ataque btn-style1 text-button color-btn-movil"> 
+                    <img src="./images/fire.png" alt="">
+                </button>
+                <button id="boton-agua2" class="btn-ataque btn-style1 text-button color-btn-movil"> 
+                    <img src="./images/splash.png" alt="">
+                </button>
+                <button id="boton-tierra2" class="btn-ataque btn-style1 text-button color-btn-movil"> 
+                    <img src="./images/soil.png" alt="">
+                </button>
             </div>
 
         </section>
